2006-07-26  Carsten Neumann  <cn-develop@gmx.net>

	* StrictMath.java (cosh): New method.
	(expm1): New method.
	(EXPM1_Q1): New field.
	(EXPM1_Q2): Likewise.
	(EXPM1_Q3): Likewise.
	(EXPM1_Q4): Likewise.
	(EXPM1_Q6): Likewise.

2006-07-26  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicButtonListener.java
	(mousePressed): Request focus if appropriate.
	* javax/swing/text/DefaultCaret.java
	(mousePressed): Also handle the focus of the text component
	as specified. Don't consume events.

2006-07-26  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/GtkComponentPeer.java
	(focusRequest): Removed field.
	(postFocusEvent(int,boolean,Component)): Removed.
	(postFocusEvent(int,boolean)): Reverted to post event using
	the heavyweight component.
	(requestFocus): Post focus event using the heavyweight
	component.
	* gnu/java/awt/peer/gtk/GtkWindowPeer.java
	(requestFocus): Post focus event using the heavyweight
	component.
	* java/awt/AWTEvent.java
	(isFocusManagerEvent): New field, indicating if this is
	an event that is redispatched by the KeyboardFocusManager.
	* java/awt/Component.java
	(requestFocusImpl): Register component for
	heavyweight->lightweight mapping.
	(dispatchEventImpl): Retarget focus events before dispatching
	to the KeyboardFocusManager. Use new AWTEvent flag instead
	of locking hack. Dispatch all events through the
	KeyboardFocusManager. Don't request focus on lightweight
	components.
	* java/awt/DefaultKeyboardFocusManager.java
	(dispatchEvent): Pulled out handling of FOCUS_GAINED and
	FOCUS_LOST.
	(handleFocusGained): Fixed handling of temporary vs permanent
	focus changes. Added some checks.
	(handleFocusLost): Fixed handling of temporary vs permanent
	focus changes. Added some checks.
	* java/awt/EventDispatchThread.java
	(run): Don't dispatch to KeyboardFocusManager here. This
	is done in Component.dispatchEventImpl().
	* java/awt/KeyboardFocusManager.java