@@ -1,3 +1,9 @@
+2006-07-26  Roman Kennke  <kennke@aicas.com>
+
+	* java/awt/KeyboardFocusManager.java
+	(getFocusOwner): Don't check permanent owner.
+	(getGlobalFocusOwner): Don't check permanent owner.
+
 2006-07-26  Carsten Neumann  <cn-develop@gmx.net>
 
 	* StrictMath.java (cosh): New method.
